created xml file with student data, added xslt extension in vscode, established boilerplate xsl, updated task.json xml path information for displaying elements and styled both p tags and table looping through data and displaying in paragraph form and table.  Created a read html file that takes xml data into function and displays namespace students both hs and c students styled inline css.

--- a/read-xml.html
+++ b/read-xml.html
@@ -24,13 +24,14 @@
                             let xml = parser.parseFromString(data, "application/xml")
                             document.getELementById('output').textContent = data;
                             console.log(xml);
-                            buildStudentList(xml);
+                            buildHSStudentList(xml);
+                            buildCStudnetList(xml);
                     });
                 })
 
-                function buildStudentList(x) {
-                    let list = document.getElementById('class');
-                    let house = x.getElementsByTagName('student');
+                function buildHSStudentList(x) {
+                    let list = document.getElementById('hs:class');
+                    let class = x.getElementsByTagName('hs:student');
                     for (let i=0; i<class.length; i++){
                         let li = document.createElement('li');
                         let student = class[i].firstChild.nodeValue
@@ -41,13 +42,13 @@
                     }
 
                 function buildCStudents(x) {
-                let list = document.getElementById('class');
-                    let house = x.getElementsByTagName('cstudent');
+                let list = document.getElementById('c:class');
+                    let class = x.getElementsByTagName('c:student');
                     for (let i=0; i<class.length; i++){
                         let li = document.createElement('li');
                         let student = class[i].firstChild.nodeValue;
-                        let gradeAverage = cstudent[i].getAttribute('gpa');
-                        li.textContent = `${cstudent} - ${gradeAverage}`;
+                        {{/* let gradeAverage = student[i].getAttribute('gpa'); */}}
+                        li.textContent = `${student} - ${gradeAverage}`;
                         li.textContent = cstudent;
                         list.appendChild(li);
                         }
